# 16next_firmware

./: .clang-format  16next.cpp  16next.h  CMakeLists.txt  LICENSE.md  README.md  SYSEX_SPEC.md  main.cpp  main.h  midi_uart_lib_config.h  tusb_config.h  usb_descriptors.c
board/: 16next-proto.h  16nx.h
lib/: HystFilter.cpp  HystFilter.h  ResponsiveAnalogRead.cpp  ResponsiveAnalogRead.h  ResponsiveAnalogRead.hpp  config.cpp  config.h  eeprom.cpp  eeprom.h  flash_onboard.cpp  flash_onboard.h  i2c.cpp  i2c.h  i2c_utils.cpp  local_flash.cpp  local_flash.h  spi_flash.cpp  spi_flash.h  sysex.cpp  sysex.h
lib/tx_helper/: tx_helper.cpp  tx_helper.h
